2001-08-07  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Added `panel-temp' target with all files which are
	already ported to GNOME 2.

	* panel-marshal.list, panel-marshal-main.c: New files.

2001-08-06  Martin Baulig  <baulig@suse.de>

	* aligned-widget.c, applet-widget.c, border-widget.c,
	button-widget.c, floating-widget.c, gnome-panel-screenshot.c,
	main.c, panel-widget.c, sliding-widget.c, status-docklet.c:
	Merged the basic GTK+ 2.0 port from the GNOME20.

2001-08-06  Martin Baulig  <baulig@suse.de>

	* *.[ch]: #include <libgnomeui.h> instead of <gnome.h> and
	#include <bonobo-activation/bonobo-activation.h> instead
	of <libgnorba/gnorba.h>.

2001-08-06  Martin Baulig  <baulig@suse.de>

	* *.h: Use G_BEGIN/END_DECLS everywhere.

2001-08-06  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Updated for the GNOME 2 platform.

2001-08-06  Martin Baulig  <baulig@suse.de>

	* ChangeLog-20010806: Copied current ChangeLog to ChangeLog-20010806
	and started a new ChangeLog file for GNOME 2.0.
