@@ -1,5 +1,9 @@
 2001-08-07  Martin Baulig  <baulig@suse.de>
 
+	* basep-widget.[ch]: Ported to GTK+ 2.0.
+
+2001-08-07  Martin Baulig  <baulig@suse.de>
+
 	* Makefile.am: Added `panel-temp' target with all files which are
 	already ported to GNOME 2.
 
